replace android app in example

--- a/examples/esp32c3_and_android/android/.vscode/settings.json
+++ b/examples/esp32c3_and_android/android/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "emmet.includeLanguages": {
-    "rust": "html"
-  },
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
+  "rust-analyzer.cargo.target": "aarch64-linux-android"
 }
