--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -1,10 +1,17 @@
 {
-  // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
-  "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  // ---- aarch64_linux_android --------------------------------------------------------------------
+  "rust-analyzer.cargo.target": "aarch64-linux-android",
   "rust-analyzer.cargo.features": [
-    "cmp_raspberrypi"
-    // "cmp_slint"
+    // "cmp_raspberrypi"
+    "cmp_slint"
   ],
+
+  // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
+  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.features": [
+  // "cmp_raspberrypi"
+  // "cmp_slint"
+  // ],
 
   // ---- x86_64-unknown-linux-gnu -----------------------------------------------------------------
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
