--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
   // ---- aarch64_linux_android --------------------------------------------------------------------
-  "rust-analyzer.cargo.target": "aarch64-linux-android",
-  "rust-analyzer.cargo.features": [
-    // "cmp_raspberrypi"
-    "cmp_slint"
-  ],
+  // "rust-analyzer.cargo.target": "aarch64-linux-android",
+  // "rust-analyzer.cargo.features": [
+  // "cmp_raspberrypi"
+  // "cmp_slint"
+  // ],
 
   // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
@@ -14,27 +14,27 @@
   // ],
 
   // ---- x86_64-unknown-linux-gnu -----------------------------------------------------------------
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.features": [
-  //   "executor",
-  // "single-thread",
-  // "env_vars",
-  // "logging"
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  "rust-analyzer.cargo.features": [
+    "executor",
+    // "single-thread",
+    // "env_vars",
+    "logging"
 
-  //   "cmp_auth",
-  // "cmp_http_client"
-  //   "cmp_http_server",
-  // "cmp_influxdb"
-  //   "cmp_modbus_client",
-  //   "cmp_plc",
-  // "cmp_redis_client"
-  // "cmp_slint"
-  //   "cmp_surrealdb",
-  // "cmp_system_info"
-  //   "cmp_timescaledb",
-  // "cmp_websocket_client"
-  // "cmp_websocket_server"
-  // ],
+    //   "cmp_auth",
+    // "cmp_http_client"
+    //   "cmp_http_server",
+    // "cmp_influxdb"
+    //   "cmp_modbus_client",
+    //   "cmp_plc",
+    // "cmp_redis_client"
+    // "cmp_slint"
+    //   "cmp_surrealdb",
+    // "cmp_system_info"
+    //   "cmp_timescaledb",
+    // "cmp_websocket_client"
+    // "cmp_websocket_server"
+  ],
 
   // ---- wasm32 -----------------------------------------------------------------------------------
   // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
