--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -19,10 +19,10 @@
     "executor",
     // "single-thread",
     // "env_vars",
-    "logging"
+    // "logging"
 
-    //   "cmp_auth",
-    // "cmp_http_client"
+    // "cmp_auth"
+    "cmp_http_client"
     //   "cmp_http_server",
     // "cmp_influxdb"
     //   "cmp_modbus_client",
