--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -22,12 +22,12 @@
     // "logging"
 
     // "cmp_auth"
-    "cmp_http_client"
-    //   "cmp_http_server",
+    // "cmp_http_client"
+    // "cmp_http_server"
     // "cmp_influxdb"
-    //   "cmp_modbus_client",
-    //   "cmp_plc",
-    // "cmp_redis_client"
+    // "cmp_modbus_client"
+    // "cmp_plc"
+    "cmp_redis_client"
     // "cmp_slint"
     //   "cmp_surrealdb",
     // "cmp_system_info"
