--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -35,6 +35,7 @@ futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.6.5", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.5", features = ["csr"], optional = true }
+log = { version = "0.4.21", optional = true }
 postcard = { version = "1.0.8", features = ["use-std"], optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
@@ -136,6 +137,7 @@ executor = ["dep:async-trait", "dep:futures", "dep:tokio"]
 
 ## Настройка логгирования сообщений
 logging = [
+    "dep:log",
     "dep:openssl",
     "dep:tokio",
     "dep:tracing-loki",
