--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ log = { version = "0.4.21", optional = true }
 postcard = { version = "1.0.8", features = ["use-std"], optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
 reqwest = { version = "0.12.0", features = ["json"], optional = true }
+rumqttc = { version = "0.24.0", optional = true }
 rppal = { version = "0.17.1", optional = true }
 palette = { version = "0.7.4", features = ["named"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
@@ -200,6 +201,9 @@ cmp_leptos = [
 
 ## Компонент Modbus клиент
 cmp_modbus_client = ["executor", "dep:tokio-modbus"]
+
+## Комонент клиента MQTT
+cmp_mqtt_client = ["executor", "dep:rumqttc"]
 
 ## Компонент ПЛК
 cmp_plc = ["executor", "dep:instant", "dep:gloo"]
