--- a/examples/esp32c3_and_android/android/Cargo.toml
+++ b/examples/esp32c3_and_android/android/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 futures = "*"
-rsiot = { path = "../../../rsiot", features = [
+rsiot = { path = "../../../", features = [
     "executor",
     "cmp_slint",
     "cmp_http_client",
