--- a/examples/esp32c3_and_android/message/Cargo.toml
+++ b/examples/esp32c3_and_android/message/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 
 [dependencies]
-rsiot = { path = "../../../rsiot" }
+rsiot = { path = "../../.." }
 serde = { version = "*", features = ["derive"] }
