--- a/examples/esp32c3_and_android/android_tauri/Cargo.toml
+++ b/examples/esp32c3_and_android/android_tauri/Cargo.toml
@@ -3,7 +3,6 @@ name = "android_tauri-ui"
 version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 leptos = { version = "0.6", features = ["csr"] }
 wasm-bindgen = "0.2"
@@ -12,6 +11,15 @@ js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+tokio = { version = "*", features = ["rt"] }
+anyhow = { version = "*" }
+rsiot = { path = "../../../", features = [
+    "cmp_http_client_wasm",
+    "cmp_leptos",
+    "single-thread",
+] }
+
+message = { path = "../message" }
 
 [workspace]
 members = ["src-tauri"]
