--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,11 @@
   // ],
 
   // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
-  "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
-  "rust-analyzer.cargo.features": [
-    "cmp_raspberrypi"
-    // "cmp_slint"
-  ],
+  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.features": [
+  // "cmp_raspberrypi"
+  // "cmp_slint"
+  // ],
 
   // ---- x86_64-unknown-linux-gnu -----------------------------------------------------------------
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
@@ -20,7 +20,6 @@
   // "single-thread",
   // "env_vars"
   // "logging",
-
   // "cmp_auth"
   // "cmp_http_client"
   // "cmp_http_server"
@@ -38,17 +37,17 @@
   // ],
 
   // ---- wasm32 -----------------------------------------------------------------------------------
-  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
-  // "rust-analyzer.cargo.features": [
-  // "single-thread", // Активировать обязательно !
-  //   "executor",
-  // "logging",
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  "rust-analyzer.cargo.features": [
+    "single-thread", // Активировать обязательно !
+    //   "executor",
+    // "logging",
 
-  // "cmp_http_client_wasm"
-  // "cmp_leptos",
-  // "cmp_websocket_client_wasm"
-  // "cmp_webstorage"
-  // ],
+    // "cmp_http_client_wasm"
+    "cmp_leptos"
+    // "cmp_websocket_client_wasm"
+    // "cmp_webstorage"
+  ],
 
   // ---- esp32 ------------------------------------------------------------------------------------
   // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
