--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.0.81"
 
 [dependencies]
 anyhow = { version = "1.0.80" }
+bincode = { version = "1.3.3" }
 chrono = { version = "0.4.35", features = ["serde"] }
 document-features = { version = "0.2.8" }
 getrandom = { version = "0.2", features = ["js"] }
