--- a/Cargo.toml
+++ b/Cargo.toml
@@ -289,6 +289,10 @@ path = "examples/cmp_esp/cmp_esp.rs"
 doc-scrape-examples = true
 
 [[example]]
+name = "cmp_esp_i2c_master_pcf8575"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_pcf8575.rs"
+
+[[example]]
 name = "cmp_influxdb"
 path = "examples/cmp_influxdb/cmp_influxdb.rs"
 
