--- a/target_config.json
+++ b/target_config.json
@@ -16,6 +16,7 @@
         "cmp_redis_client",
         "cmp_slint",
         "cmp_surrealdb",
+        "cmp_telegram",
         "cmp_timescaledb",
         "cmp_websocket_client",
         "cmp_websocket_server",
@@ -52,6 +53,7 @@
         "cmp_redis_client",
         "cmp_slint",
         "cmp_surrealdb",
+        "cmp_telegram",
         "cmp_timescaledb",
         "cmp_websocket_client",
         "cmp_websocket_server",
