--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,15 @@
   // ---- aarch64_linux_android --------------------------------------------------------------------
   // "rust-analyzer.cargo.target": "aarch64-linux-android",
   // "rust-analyzer.cargo.features": [
-  // "cmp_raspberrypi"
   // "cmp_slint"
   // ],
 
   // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
-  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.features": [
-  // "cmp_raspberrypi"
-  // "cmp_slint"
-  // ],
+  "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  "rust-analyzer.cargo.features": [
+    "cmp_raspberrypi"
+    // "cmp_slint"
+  ],
 
   // ---- x86_64-unknown-linux-gnu -----------------------------------------------------------------
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
@@ -51,8 +50,8 @@
   // ],
 
   // ---- esp32 ------------------------------------------------------------------------------------
-  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
-  "rust-analyzer.cargo.features": ["executor", "logging", "cmp_esp", "cmp_plc"],
+  // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+  // "rust-analyzer.cargo.features": ["executor", "logging", "cmp_esp", "cmp_plc"],
 
   "rust-analyzer.showUnlinkedFileNotification": false
 }
