--- a/target_config.json
+++ b/target_config.json
@@ -7,6 +7,7 @@
         "executor",
         "logging",
         "cmp_auth",
+        "cmp_filesystem",
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
@@ -43,6 +44,7 @@
         "executor",
         "logging",
         "cmp_auth",
+        "cmp_filesystem",
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
