--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
     // "env_vars"
     // "logging"
     // "cmp_auth"
-    "cmp_filesystem"
+    // "cmp_filesystem",
     // "cmp_http_client"
     // "cmp_http_server"
     // "cmp_filesystem",
@@ -34,7 +34,7 @@
     // "cmp_system_info"
     // "cmp_telegram"
     // "cmp_timescaledb"
-    // "cmp_websocket_client"
+    "cmp_websocket_client"
     // "cmp_websocket_server"
   ],
 
@@ -48,7 +48,7 @@
   // "cmp_http_client_wasm",
   // "cmp_leptos",
   // "cmp_plc"
-  // "cmp_websocket_client_wasm",
+  // "cmp_websocket_client_wasm"
   // "cmp_webstorage"
   // ],
 
