--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,11 @@
   // ],
 
   // ---- aarch64-unknown-linux-gnu ----------------------------------------------------------------
-  "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
-  "rust-analyzer.cargo.features": [
-    "cmp_raspberrypi"
-    // "cmp_slint"
-  ],
+  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.features": [
+  // "cmp_raspberrypi"
+  // "cmp_slint"
+  // ],
 
   // ---- x86_64-unknown-linux-gnu -----------------------------------------------------------------
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
@@ -53,8 +53,8 @@
   // ],
 
   // ---- esp32 ------------------------------------------------------------------------------------
-  // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
-  // "rust-analyzer.cargo.features": ["executor", "logging", "cmp_esp", "cmp_plc"],
+  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+  "rust-analyzer.cargo.features": ["executor", "logging", "cmp_esp", "cmp_plc"],
 
   "rust-analyzer.showUnlinkedFileNotification": false
 }
