--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
 async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
+bcd-numbers = { version = "1.0.11", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-svc = { version = "0.27.1", optional = true }
@@ -163,6 +164,7 @@ cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
 cmp_esp = [
     "executor",
     "single-thread",
+    "dep:bcd-numbers",
     "dep:embedded-svc",
     "dep:heapless",
     "dep:postcard",
@@ -262,12 +264,7 @@ cmp_webstorage = ["executor", "dep:gloo"]
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
-targets = [
-    "x86_64-unknown-linux-gnu",
-    # "aarch64-unknown-linux-gnu",
-    # "riscv32imc-esp-espidf",
-    "wasm32-unknown-unknown",
-]
+targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 
 
@@ -291,6 +288,10 @@ path = "./examples/cmp_esp/cmp_esp_i2c_master_ads1115.rs"
 [[example]]
 name = "cmp_esp_i2c_master_bmp180"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_bmp180.rs"
+
+[[example]]
+name = "cmp_esp_i2c_master_ds3231"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_ds3231.rs"
 
 [[example]]
 name = "cmp_esp_i2c_master_pcf8575"
