add leptos components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,8 +46,8 @@
     // "logging",
 
     // "cmp_http_client_wasm",
-    "cmp_leptos"
-    // "cmp_plc"
+    "cmp_leptos",
+    "cmp_plc"
     // "cmp_websocket_client_wasm"
     // "cmp_webstorage"
   ],
