--- a/Cargo.toml
+++ b/Cargo.toml
@@ -296,6 +296,10 @@ name = "cmp_esp_i2c_master_pcf8575"
 path = "./examples/cmp_esp/cmp_esp_i2c_master_pcf8575.rs"
 
 [[example]]
+name = "cmp_esp_i2c_master_ssd1306"
+path = "./examples/cmp_esp/cmp_esp_i2c_master_ssd1306.rs"
+
+[[example]]
 name = "cmp_esp_nvs"
 path = "examples/cmp_esp_nvs/cmp_esp_nvs.rs"
 
