--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = [ "examples/level_measure_bmp180/backend","examples/level_measure_bmp180/esp32", "examples/level_measure_bmp180/messages"] }
 [package]
 categories = ["api-bindings", "gui", "network-programming"]
 description = "Метакрейт, импортирующий все другие крейты через флаги feature"
