--- a/examples/material_components/Cargo.toml
+++ b/examples/material_components/Cargo.toml
@@ -4,13 +4,22 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-leptos = { version = "0.6", features = ["csr"] }
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
-js-sys = "0.3"
-serde = { version = "1", features = ["derive"] }
-serde-wasm-bindgen = "0.6"
+# leptos = { version = "0.6", features = ["csr"] }
+leptos = { version = "0.7.0-alpha", features = ["csr"] }
+# wasm-bindgen = "0.2"
+# wasm-bindgen-futures = "0.4"
+# js-sys = "0.3"
+# serde = { version = "1", features = ["derive"] }
+# serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+tracing = "*"
+
+rsiot = { path = "../../.", features = [
+    "single-thread",
+    "logging",
+    "cmp_leptos",
+    "cmp_plc",
+] }
 
 [workspace]
 # members = ["src-tauri"]
