--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -6,21 +6,58 @@
           "command": "clippy"
         },
         "cargo": {
-          // WASM32 --------------------------------------------------------------------------------
+          // ---- aarch64_linux_android ------------------------------------------------------------
+          // "target": "aarch64-linux-android",
+          // "features": [
+          // "cmp_slint"
+          // ],
+          // ---- aarch64-unknown-linux-gnu --------------------------------------------------------
+          // "target": "aarch64-unknown-linux-gnu",
+          // "features": [
+          // "cmp_raspberrypi",
+          // "cmp_slint"
+          // "cmp_telegram"
+          // ]
+          // ---- riscv32imc-esp-espidf ------------------------------------------------------------
+          // "target": "riscv32imc-esp-espidf",
+          // "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
+          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
+          // "target": "x86_64-unknown-linux-gnu",
+          // "features": [
+          // "executor",
+          // "single-thread",
+          // "env_vars"
+          // "logging"
+          // "cmp_auth"
+          // "cmp_filesystem",
+          // "cmp_http_client"
+          // "cmp_http_server"
+          // "cmp_filesystem",
+          // "cmp_influxdb"
+          // "cmp_modbus_client"
+          // "cmp_mqtt_client"
+          // "cmp_plc",
+          // "cmp_redis_client"
+          // "cmp_slint"
+          // "cmp_surrealdb"
+          // "cmp_system_info"
+          // "cmp_telegram"
+          // "cmp_timescaledb"
+          // "cmp_websocket_client"
+          // "cmp_websocket_server"
+          // ]
+          // ---- wasm32-unknown-unknown -----------------------------------------------------------
           "target": "wasm32-unknown-unknown",
           "features": [
             "single-thread", // Активировать обязательно !
-            "executor",
-            "logging",
-            "cmp_http_client_wasm",
-            "cmp_leptos",
-            "cmp_plc",
-            "cmp_websocket_client_wasm",
-            "cmp_webstorage"
+            //   "executor",
+            //   "logging",
+            //   "cmp_http_client_wasm",
+            "cmp_leptos"
+            //   "cmp_plc",
+            //   "cmp_websocket_client_wasm",
+            //   "cmp_webstorage"
           ]
-          // ESP32 ---------------------------------------------------------------------------------
-          // "target": "riscv32imc-esp-espidf",
-          // "features": ["executor", "logging", "cmp_esp", "cmp_plc"]
         }
       }
     }
