--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -53,8 +53,8 @@
             //   "executor",
             //   "logging",
             //   "cmp_http_client_wasm",
-            "cmp_leptos"
-            //   "cmp_plc",
+            "cmp_leptos",
+            "cmp_plc"
             //   "cmp_websocket_client_wasm",
             //   "cmp_webstorage"
           ]
