--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 dotenvy = { version = "0.15.7", optional = true }
-embedded-svc = { version = "0.27.1", optional = true }
+embedded-svc = { version = "0.28.0", optional = true }
 envy = { version = "0.4.2", optional = true }
 heapless = { version = "0.8.0", optional = true }
 http = { version = "1.0.0", optional = true }
@@ -37,7 +37,6 @@ jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
 hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.6.12", features = ["csr"], optional = true }
-# leptos = { version = "0.7.0-alpha", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.12", features = ["csr"], optional = true }
 log = { version = "0.4.21", optional = true }
 postcard = { version = "1.0.8", features = ["use-std"], optional = true }
@@ -114,7 +113,7 @@ openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 [target.'cfg(all(target_arch = "riscv32", target_vendor = "espressif", target_os = "espidf"))'.dependencies]
 esp-idf-svc = { version = "0.48.1", features = ["std"] }
-embedded-svc = { version = "0.27.1", optional = true }
+# embedded-svc = { version = "0.27.1", optional = true }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
