--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 dotenvy = { version = "0.15.7", optional = true }
-embedded-svc = { version = "0.28.0", optional = true }
+embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
 heapless = { version = "0.8.0", optional = true }
 http = { version = "1.0.0", optional = true }
@@ -112,7 +112,7 @@ openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 
 [target.'cfg(all(target_arch = "riscv32", target_vendor = "espressif", target_os = "espidf"))'.dependencies]
-esp-idf-svc = { version = "0.48.1", features = ["std"] }
+esp-idf-svc = { version = "0.49.1", features = ["std"] }
 # embedded-svc = { version = "0.27.1", optional = true }
 
 
