--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1.0.197", features = ["derive"] }
 thiserror = { version = "1.0.57" }
 tracing = { version = "0.1.40", features = ["log"] }
-uuid = { version = "1.7.0", features = ["serde", "v4"] }
+uuid = { version = "1.7.0", features = ["macro-diagnostics", "serde", "v4"] }
 
 async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
