--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -36,12 +36,12 @@
             // "cmp_influxdb"
             // "cmp_modbus_client"
             // "cmp_mqtt_client"
-            "cmp_plc"
+            // "cmp_plc"
             // "cmp_redis_client"
             // "cmp_slint"
             // "cmp_surrealdb"
             // "cmp_system_info"
-            // "cmp_telegram"
+            "cmp_telegram"
             // "cmp_timescaledb"
             // "cmp_websocket_client"
             // "cmp_websocket_server"
