--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { version = "0.4.35", features = ["serde"] }
 document-features = { version = "0.2.8" }
 getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1.0.197", features = ["derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
 thiserror = { version = "1.0.57" }
 tracing = { version = "0.1.40", features = ["log"] }
 uuid = { version = "1.7.0", features = ["macro-diagnostics", "serde", "v4"] }
